将它变成了命令行的形式，添加了对命令行参数的解析

--- a/.bugtagsrc
+++ b/.bugtagsrc
@@ -1,13 +1,14 @@
 {
     "name":"Bugtags-demo-deploy-cli",
-    "version": "0.1.0",
-    "user": "you-username",
-    "password": "you-password",
+    "version": "0.0.6",
+    "user": "Boelroy",
+    "password": "your-password",
     "owner": "Boelroy",
-    "repo": "deploy-cli",
-    "releases": ["master"],
-    "qiniu_ak": "",
-    "qiniu_sk":"",
-    "qiniu_buckect": "you-buckect",
-    "description": "test"
+    "repo": "your-repo",
+    "release": false,
+    "branches": "master, dev",
+    "qiniu-ak": "your-ak",
+    "qiniu-sk": "your-sk",
+    "qiniu-buckect": "your-buckect",
+    "desc": "test"
 }
