--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
   "name": "bugtags-demo-deploy-cli",
-  "version": "0.0.1",
+  "version": "0.0.3",
+  "license": "MIT",
   "description": "make bugtags demo deploy more easy",
   "engines": {
     "node": ">=4"
+  },
+  "bin": {
+    "btdeploy": "cli.js"
   },
   "files": [
     "cli.js"
   ],
   "dependencies": {
     "github": "^0.2.4",
+    "meow": "^3.7.0",
+    "node-github": "0.0.3",
     "node-promise": "^0.5.12",
     "qiniu": "^6.1.9",
     "superagent": "^1.6.1",
     "superagent-promise": "^1.1.0"
-  },
-  "devDependencies": {
-    "node-github": "0.0.3"
   }
 }
