--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "bugtags-demo-deploy-cli",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "license": "MIT",
   "description": "make bugtags demo deploy more easy",
   "engines": {
     "node": ">=4"
+  },
+  "repository":{ 
+    "type" : "git",
+    "url" : "https://github.com/Boelroy/deploy-cli"
   },
   "bin": {
     "btdeploy": "cli.js"
